# aws_agent_1

./: .gitignore  CLAUDE.md  LEARNING_PLAN.md  LEARNING_PLAN_agentic_memory_evals.md  LEARNING_PLAN_v148_impact.md  NEXT_STEPS_PLAN.md  NOTE_2026-05-19_agentcore_agent_registry.md  README.md  pyproject.toml
01_basics/: agent_with_tools.py  custom_tools.py  hello_agent.py
02_intermediate/: sessions.py  system_prompts.py
03_multi_agent/: agents_as_tools.py  graph_workflow.py  swarm_example.py
04_production/: agentcore_deploy.py  mcp_integration.py
05_advanced/: rag_integration.py  rag_lancedb.py  reflection_pattern.py  structured_outputs.py
06_memory/: __init__.py  benchmark_memory_systems.py  benchmark_query.py  benchmark_state.json  benchmark_store.py  context_management.py  cross_session_memory.py  graph_memory_benchmark.py  long_horizon_memory.py  longterm_memory.py  memory_rematch_native.py  memory_rematch_semantic.py  memory_value_capstone.py  shared_agent_memory.py  unified_memory.py
07_advanced_multiagent/: __init__.py  debate_pattern.py  meta_agents.py  planning_agents.py
08_production/: __init__.py  data_access_policy.txt  error_recovery.py  interventions_unified.py  observability.py  safety_guardrails.py
09_cutting_edge/: research_agent.py  self_improving.py  tool_synthesis.py
10_production/l27agentcore/: .bedrock_agentcore.yaml  README.md  pyproject.toml
10_production/l27agentcore/cdk/: package-lock.json
10_production/l27agentcore/cdk/lib/stacks/: agentcore-stack.ts
10_production/l27agentcore/src/model/: load.py
11_2026_updates/: mcp_elicitation.py  service_tiers.py  session_management.py  sliding_window_tokens.py
11_platform/: a2a_protocol.py  agentcore_evaluations.py  agentcore_policy.py  ai_functions.py  bidi_streaming.py  edge_strands.py  (+6 more)
(+470 files in other folders)
